objects/Employee_Reporting__c/Employee_Reporting__c.object-meta.xml
<CustomObject>
    <label>Employee Reporting</label>
    <nameField>
        <label>Employee Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>