objects/Employee_Reporting__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <referenceTo>Developer__c</referenceTo>
    <relationshipLabel>Employee Reporting</relationshipLabel>
    <relationshipName>Employee_Reporting</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>