objects/Employee_Reporting__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <referenceTo>Manager__c</referenceTo>
    <relationshipLabel>Employee Reporting</relationshipLabel>
    <relationshipName>Employee_Reporting</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>