objects/Employee_Reporting__c/fields/Project_Aligned__c.field-meta.xml
<CustomField>
    <fullName>Project_Aligned__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Manager__r.Project__c , &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project_Aligned</label>
    <type>Text</type>
</CustomField>